infrastructure/ibmcloud-galasadev-cluster/tekton/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: tekton
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - tekton.galasa.dev
    secretName: galasa-wildcard-cert
  rules:
  - host: tekton.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
        path: /
        pathType: Prefix
